--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <link href="css/style.css" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/5586523a3b.js" crossorigin="anonymous"></script>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     
     
 </head>
