--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
       <!-- service section -->
 
-  <section class="service_section layout_padding ">
+  <section class="service_section layout_padding " id="Service_details">
     <div class="container" >
       <div class="heading_container heading_center">
         <h2> Our Services </h2>
