--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 
       <!-- service section -->
 
-  <section class="service_section layout_padding " id="Service_details">
-    <div class="container" >
+  <section class="service_section layout_padding " >
+    <div class="container" id="Service_details">
       <div class="heading_container heading_center">
         <h2> Our Services </h2>
       </div>
