--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <h2> Our Services </h2>
       </div>
       <div class="row">
-        <div class="col-sm-6 col-md-4 mx-auto">
+        <div class="col-sm-6 col-md-4 mx-auto d-flex align-items-stretch">
           <div class="box ">
             <div class="img-box">
               <img src="img/s1.png" alt="" />
@@ -184,7 +184,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 mx-auto">
+        <div class="col-sm-6 col-md-4 mx-auto d-flex align-items-stretch">
           <div class="box ">
             <div class="img-box">
               <img src="img/s2.png" alt="" />
@@ -204,7 +204,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 mx-auto">
+        <div class="col-sm-6 col-md-4 mx-auto d-flex align-items-stretch">
           <div class="box ">
             <div class="img-box">
               <img src="img/s3.png" alt="" />
@@ -221,7 +221,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 mx-auto">
+        <div class="col-sm-6 col-md-4 mx-auto d-flex align-items-stretch">
           <div class="box ">
             <div class="img-box">
               <img src="img/s4.png" alt="" />
@@ -237,7 +237,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 mx-auto">
+        <div class="col-sm-6 col-md-4 mx-auto d-flex align-items-stretch">
           <div class="box ">
             <div class="img-box">
               <img src="img/s5.png" alt="" />
@@ -253,7 +253,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 mx-auto">
+        <div class="col-sm-6 col-md-4 mx-auto d-flex align-items-stretch">
           <div class="box ">
             <div class="img-box">
               <img src="img/s6.png" alt="" />
